--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
 
                 </ul>
                 <form class="d-flex">
-                    <input id="searchTxt" class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                    <input id="searchTxt" class="form-control me-2" type="search" placeholder="Search"
+                        aria-label="Search">
                     <button class="btn btn-outline-success" type="submit">Search</button>
                 </form>
             </div>
@@ -42,6 +43,11 @@
         <h1>Welcome to Magic Notes</h1>
         <div class="card">
             <div class="card-body">
+                <h5 class="card-title">Add a Title</h5>
+                <div class="form-floating mb-3">
+                    <input type="text" class="form-control" id="addTitle" placeholder="Add a title to your Note">
+                    <label for="floatingInput">Add a title</label>
+                </div>
                 <h5 class="card-title">Add a Note</h5>
                 <div class="mb-3">
                     <textarea class="form-control" id="addTxt" rows="3"></textarea>
@@ -53,8 +59,8 @@
         <h2>Add Notes</h2>
         <hr>
         <div id="notes" class="row container-fluid">
-            
-            
+
+
 
         </div>
     </div>
@@ -64,7 +70,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
-    <script src="/js/app.js"></script>
+    <script src="/js/app2.js"></script>
     <!-- Option 2: Separate Popper and Bootstrap JS -->
     <!--
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
